# oss_archive

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ToDo.md  database.md  index.md  roadmap.md  schemas.md  seeders.md
json-archive/: categories.json  oss.json  owners.json
json-archive/categories/: categories-p1-1.json  categories-p3-1.json  categories-p4-1.json  categories-p5-1.json  categories-p6-1.json  categories-p7-1.json
json-archive/oss/: oss-p7-1.json
json-archive/owners/: owners-p1-1.json  owners-p2-1.json  owners-p3-1.json  owners-p4-1.json  owners-p7-1.json  owners-p8-1.json  owners-p9-1.json
kreya/: oss_archive.krproj  ping.krop
kreya/api/licenses/: get all.krop  get one by key.krop
kreya/api/meta_lists/: add meta list item-request.json  add meta list item.krop  get all.krop  get one by key.krop
kreya/api/os_softwares/: get all.krop  get one by id.krop
kreya/api/oss_lists/: directory.krpref  get all.krop  get on by key.krop
kreya/api/owners/: get all.krop  get one by id.krop
kreya/seeders/codeberg/: directory.krpref  get org by username.krop  get org's repo by name.krop  get org's repos.krop
oss_archive/: config.py  main.py
oss_archive/database/: helpers.py  index.py  models.py
oss_archive/schemas/: api.py  category.py  general.py  license.py  meta_item.py  meta_list.py  os_software.py  oss.py  owner.py
oss_archive/seeders/: forgejo.py  helpers.py  index.py  json.py
oss_archive/utils/: compress.py  formatter.py  git.py  httpx.py  json.py  logger.py  paths.py  prioritize_and_diversify.py  schemas.py  tarfile.py
(+64 files in other folders)
